sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:3: error: not found: value ecart
  ecart = getNombreValeurs()
  ^AlgCombSort:6: error: not found: value ecart
    if(ecart>1) {
       ^AlgCombSort:7: error: not found: value ecart
      ecart = (ecart.toDouble / 1.3).toInt
      ^AlgCombSort:10: error: not found: value ecart
    for (i <- 0 to getNombreValeurs - ecart - 1) {
                                      ^AlgCombSort:17: error: not found: value ecart
  while(ecart>1 | ok)
        ^